--- a/Gradebook/JustinMcphatter_gradebook.html
+++ b/Gradebook/JustinMcphatter_gradebook.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Gradebook</title>
+	<script src="gradebook.js"></script>
     <style>
         table {
             border-collapse: collapse;
